Fixed logo and contact details alignment issues.

--- a/src/less/common.less
+++ b/src/less/common.less
@@ -211,4 +211,14 @@ ul.bulleted li {
         display: inline-block;
         width: auto;
     }
+
+    .logo-wrapper {
+
+        padding-left: 0;
+    }
+
+    .contact-details {
+
+        padding-right: 0;
+    }
 }
